fixed spacing and sizing issues

--- a/store/src/App.css
+++ b/store/src/App.css
@@ -1,5 +1,5 @@
 body{
-  background:'white';
+  background:rgb(240,240,240);
 }
 .card:hover{
   background:rgb(230,230,230);
